second  commit with email, redis,indexing feature.