@@ -15,15 +15,23 @@ import com.example.backend.enums.Status;
 import com.example.backend.exception.BadRequestException;
 import com.example.backend.exception.ResourceNotFoundException;
 import com.example.backend.exception.UnauthorizedException;
+import com.example.backend.event.TaskAssignedEvent;
+import com.example.backend.event.TaskDeletedEvent;
+import com.example.backend.event.TaskUpdatedEvent;
 import com.example.backend.repository.CommentRepository;
 import com.example.backend.repository.ProjectRepository;
 import com.example.backend.repository.TaskRepository;
 import com.example.backend.repository.UserRepository;
 import com.example.backend.service.TaskService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
@@ -40,9 +48,11 @@ public class TaskServiceImpl implements TaskService {
 
     @Autowired
     private UserRepository userRepository;
+
     @Autowired
     private CommentRepository commentRepository;
-    // ✅ get current logged-in user
+    @Autowired
+    private ApplicationEventPublisher publisher;
     private User getCurrentUser() {
         Object principal = SecurityContextHolder
                 .getContext()
@@ -55,11 +65,12 @@ public class TaskServiceImpl implements TaskService {
         }
         throw new UnauthorizedException("Invalid authentication");
     }
+
     private TaskResponse mapToResponse(Task task) {
         return mapToResponse(task, null);
     }
-    // ✅ convert Task entity → TaskResponse DTO
-    private TaskResponse mapToResponse(Task task,String taskType) {
+
+    private TaskResponse mapToResponse(Task task, String taskType) {
         return new TaskResponse(
                 task.getId(),
                 task.getTitle(),
@@ -67,14 +78,11 @@ public class TaskServiceImpl implements TaskService {
                 task.getStatus() != null ? task.getStatus().name() : null,
                 task.getPriority() != null ? task.getPriority().name() : null,
                 task.getDueDate(),
-
                 task.getProject() != null ? task.getProject().getId() : null,
                 task.getProject() != null ? task.getProject().getName() : null,
-
                 task.getAssignedTo() != null ? task.getAssignedTo().getId() : null,
                 task.getAssignedTo() != null ? task.getAssignedTo().getName() : null,
                 task.getAssignedTo() != null ? task.getAssignedTo().getEmail() : null,
-
                 task.getCreatedBy() != null ? task.getCreatedBy().getId() : null,
                 task.getCreatedBy() != null ? task.getCreatedBy().getName() : null,
                 task.getCreatedAt(),
@@ -82,18 +90,25 @@ public class TaskServiceImpl implements TaskService {
         );
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = "tasks", allEntries = true),
+            @CacheEvict(value = "task-details", allEntries = true)
+    })
     @Override
     public void createTask(CreateTaskRequest request) {
 
         User currentUser = getCurrentUser();
 
+        if (request.getTitle() == null || request.getTitle().isBlank()) {
+            throw new BadRequestException("Task title is required");
+        }
+
         Project project = projectRepository.findById(request.getProjectId())
                 .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
-        // Manager can only create tasks in their own project
-        if (currentUser.getRole().name().equals("MANAGER") &&
+        if ("MANAGER".equals(currentUser.getRole().name()) &&
                 !project.getManager().getId().equals(currentUser.getId())) {
-            throw new UnauthorizedException("You can only create tasks in your project");
+            throw new UnauthorizedException("Access denied");
         }
 
         User assignedUser = userRepository.findById(request.getAssignedTo())
@@ -104,23 +119,28 @@ public class TaskServiceImpl implements TaskService {
         task.setDescription(request.getDescription());
         task.setProject(project);
         task.setAssignedTo(assignedUser);
-        task.setCreatedBy(currentUser);  // ✅ set createdBy
+        task.setCreatedBy(currentUser);
         task.setStatus(Status.TODO);
         task.setDueDate(request.getDueDate());
 
-        if (request.getPriority() != null && !request.getPriority().isEmpty()) {
+        if (request.getPriority() != null && !request.getPriority().isBlank()) {
             try {
                 task.setPriority(Priority.valueOf(request.getPriority().toUpperCase()));
             } catch (IllegalArgumentException e) {
-                throw new com.example.backend.exception.BadRequestException(
-                        "Invalid priority. Allowed: LOW, MEDIUM, HIGH"
-                );
+                throw new BadRequestException("Invalid priority. Allowed values: LOW, MEDIUM, HIGH");
             }
         } else {
             task.setPriority(Priority.MEDIUM);
         }
 
         taskRepository.save(task);
+
+        // notify assigned user via async email
+        publisher.publishEvent(new TaskAssignedEvent(
+                assignedUser.getEmail(),
+                task.getTitle(),
+                project.getName()
+        ));
     }
 
 //    @Override
@@ -129,7 +149,6 @@ public class TaskServiceImpl implements TaskService {
 //        User currentUser = getCurrentUser();
 //        String role = currentUser.getRole().name();
 //
-//        // ADMIN — sees all tasks
 //        if ("ADMIN".equals(role)) {
 //            return taskRepository.findAll()
 //                    .stream()
@@ -137,7 +156,6 @@ public class TaskServiceImpl implements TaskService {
 //                    .toList();
 //        }
 //
-//        // MANAGER — sees all tasks in their projects + their own tasks
 //        if ("MANAGER".equals(role)) {
 //            return taskRepository.findTasksForManager(currentUser.getId())
 //                    .stream()
@@ -149,7 +167,6 @@ public class TaskServiceImpl implements TaskService {
 //                    .toList();
 //        }
 //
-//        // EMPLOYEE — sees only their own tasks
 //        return taskRepository.findByAssignedToId(currentUser.getId())
 //                .stream()
 //                .map(task -> mapToResponse(task, null))
@@ -175,131 +192,128 @@ public class TaskServiceImpl implements TaskService {
 //                .map(this::mapToResponse)
 //                .toList();
 //    }
-//
-@Override
-public TaskDetailsResponse getTaskById(Long taskId) {
 
-    User currentUser = getCurrentUser();
-    String role = currentUser.getRole().name();
+    @Cacheable(
+            value = "task-details",
+            key = "#taskId + '-' + T(org.springframework.security.core.context.SecurityContextHolder)" +
+                    ".getContext().getAuthentication().getName()"
+    )
+    @Override
+    public TaskDetailsResponse getTaskById(Long taskId) {
 
-    Task task = taskRepository.findById(taskId)
-            .orElseThrow(() -> new ResourceNotFoundException("Task not found"));
+        User currentUser = getCurrentUser();
+        String role = currentUser.getRole().name();
 
-    // 🔐 ACCESS CONTROL
-    if ("EMPLOYEE".equals(role)) {
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new ResourceNotFoundException("Task not found"));
 
-        if (task.getAssignedTo() == null ||
-                !task.getAssignedTo().getId().equals(currentUser.getId())) {
-            throw new UnauthorizedException("Access denied");
+        if ("EMPLOYEE".equals(role)) {
+            if (task.getAssignedTo() == null ||
+                    !task.getAssignedTo().getId().equals(currentUser.getId())) {
+                throw new UnauthorizedException("Access denied");
+            }
+        } else if ("MANAGER".equals(role)) {
+            boolean isManagerProject =
+                    task.getProject().getManager().getId().equals(currentUser.getId());
+            boolean isAssigned =
+                    task.getAssignedTo() != null &&
+                            task.getAssignedTo().getId().equals(currentUser.getId());
+            if (!isManagerProject && !isAssigned) {
+                throw new UnauthorizedException("Access denied");
+            }
         }
 
-    } else if ("MANAGER".equals(role)) {
+        List<CommentResponse> comments = commentRepository
+                .findByTaskIdOrderByCreatedAtDesc(taskId)
+                .stream()
+                .map(c -> new CommentResponse(
+                        c.getId(),
+                        c.getCommentText(),
+                        c.getUser().getName(),
+                        c.getCreatedAt()
+                ))
+                .toList();
 
-        boolean isManagerProject =
-                task.getProject().getManager().getId().equals(currentUser.getId());
+        TaskDetailsResponse response = new TaskDetailsResponse();
+        response.setId(task.getId());
+        response.setTitle(task.getTitle());
+        response.setDescription(task.getDescription());
+        response.setStatus(task.getStatus().name());
+        response.setPriority(task.getPriority().name());
+        response.setComments(comments);
 
-        boolean isAssigned =
-                task.getAssignedTo() != null &&
-                        task.getAssignedTo().getId().equals(currentUser.getId());
-
-        if (!isManagerProject && !isAssigned) {
-            throw new UnauthorizedException("Access denied");
-        }
+        return response;
     }
 
-    // =========================
-    // 💬 FETCH COMMENTS (ONLY HERE)
-    // =========================
-
-    List<CommentResponse> comments = commentRepository
-            .findByTaskIdOrderByCreatedAtDesc(taskId)
-            .stream()
-            .map(c -> new CommentResponse(
-                    c.getId(),
-                    c.getCommentText(),
-                    c.getUser().getName(),
-                    c.getCreatedAt()
-            ))
-            .toList();
-
-    // =========================
-    // 📦 RESPONSE
-    // =========================
-
-    TaskDetailsResponse response = new TaskDetailsResponse();
-
-    response.setId(task.getId());
-    response.setTitle(task.getTitle());
-    response.setDescription(task.getDescription());
-    response.setStatus(task.getStatus().name());
-    response.setPriority(task.getPriority().name());
-    response.setComments(comments);
-
-    return response;
-}
+    @Caching(evict = {
+            @CacheEvict(value = "tasks", allEntries = true),
+            @CacheEvict(value = "task-details", allEntries = true)
+    })
     @Override
     public void updateTaskStatus(Long taskId, UpdateTaskRequest request) {
+
+        // ✅ validate BEFORE doing anything
+        if (request.getStatus() == null &&
+                request.getDescription() == null &&
+                request.getComment() == null) {
+            throw new BadRequestException("Nothing to update");
+        }
 
         Task task = taskRepository.findById(taskId)
                 .orElseThrow(() -> new ResourceNotFoundException("Task not found"));
 
         User currentUser = getCurrentUser();
-
         String role = currentUser.getRole().name();
 
-        Long assignedUserId = task.getAssignedTo() != null ? task.getAssignedTo().getId() : null;
-
+        Long assignedUserId = task.getAssignedTo() != null
+                ? task.getAssignedTo().getId() : null;
         boolean isEmployee = "EMPLOYEE".equals(role);
-        boolean isOwner = assignedUserId != null && assignedUserId.equals(currentUser.getId());
+        boolean isOwner = assignedUserId != null
+                && assignedUserId.equals(currentUser.getId());
 
-        // 🔐 ACCESS CONTROL
         if (isEmployee && !isOwner) {
-            throw new UnauthorizedException("You can only update your own tasks");
+            throw new UnauthorizedException("Access denied");
         }
 
-        // =========================
-        // ✅ UPDATE STATUS
-        // =========================
         if (request.getStatus() != null) {
             try {
                 task.setStatus(Status.valueOf(request.getStatus().toUpperCase()));
             } catch (IllegalArgumentException e) {
-                throw new BadRequestException(
-                        "Invalid status. Allowed: TODO, IN_PROGRESS, DONE"
-                );
+                throw new BadRequestException("Invalid status. Allowed values: TODO, IN_PROGRESS, DONE");
             }
         }
 
-        // =========================
-        // ✅ UPDATE DESCRIPTION
-        // =========================
         if (request.getDescription() != null) {
             task.setDescription(request.getDescription());
         }
 
         taskRepository.save(task);
 
-        // =========================
-        // 💬 ADD COMMENT (NEW)
-        // =========================
-        if (request.getComment() != null && !request.getComment().trim().isEmpty()) {
-
+        // save comment after task is saved
+        if (request.getComment() != null && !request.getComment().isBlank()) {
             Comment comment = new Comment();
             comment.setTask(task);
             comment.setUser(currentUser);
             comment.setCommentText(request.getComment());
-
             commentRepository.save(comment);
         }
-        if (request.getStatus() == null &&
-                request.getDescription() == null &&
-                request.getComment() == null) {
 
-            throw new BadRequestException("Nothing to update");
+        // notify manager only when an EMPLOYEE updates the task status
+        if (isEmployee && request.getStatus() != null && task.getProject().getManager() != null) {
+            String managerEmail = task.getProject().getManager().getEmail();
+            System.out.println("===> Sending email to manager: " + managerEmail + " | updated by: " + currentUser.getEmail());
+            publisher.publishEvent(new TaskUpdatedEvent(
+                    managerEmail,
+                    task.getTitle(),
+                    task.getStatus().name()
+            ));
         }
     }
 
-
+    @Caching(evict = {
+            @CacheEvict(value = "tasks", allEntries = true),
+            @CacheEvict(value = "task-details", allEntries = true)
+    })
     @Override
     public void deleteTask(Long taskId) {
 
@@ -315,140 +329,110 @@ public TaskDetailsResponse getTaskById(Long taskId) {
             throw new UnauthorizedException("Access denied");
         }
 
-        // Manager can only delete tasks in their own project
         if (isManager &&
                 !task.getProject().getManager().getId().equals(currentUser.getId())) {
-            throw new UnauthorizedException("You can only delete tasks in your project");
+            throw new UnauthorizedException("Access denied");
         }
 
+        String assignedEmail = task.getAssignedTo() != null ? task.getAssignedTo().getEmail() : null;
+        String taskTitle = task.getTitle();
+
+        commentRepository.deleteByTaskId(taskId);
         taskRepository.delete(task);
+
+        if (assignedEmail != null) {
+            publisher.publishEvent(new TaskDeletedEvent(assignedEmail, taskTitle));
+        }
     }
+
+    @Cacheable(
+            value = "tasks",
+            key = "#page + '-' + #size + '-' + #projectId + '-' + #status + '-' + " +
+                    "T(org.springframework.security.core.context.SecurityContextHolder)" +
+                    ".getContext().getAuthentication().getName()"
+    )
     @Override
     public PaginationResponse<TaskResponse> getTasks(
-            int page,
-            int size,
-            Long projectId,
-            String status
-    ) {
+            int page, int size, Long projectId, String status) {
 
         User currentUser = getCurrentUser();
         String role = currentUser.getRole().name();
 
-        Pageable pageable = PageRequest.of(
-                page,
-                size,
-                org.springframework.data.domain.Sort.by("createdAt").descending()
-        );
-
-        Page<Task> taskPage;
-
-        // 🔥 Convert status safely
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+        System.out.println("===> DB HIT - not from cache");
         Status statusEnum = null;
         if (status != null) {
             try {
                 statusEnum = Status.valueOf(status.toUpperCase());
             } catch (IllegalArgumentException e) {
-                throw new BadRequestException(
-                        "Invalid status. Allowed: TODO, IN_PROGRESS, DONE"
-                );
+                throw new BadRequestException("Invalid status. Allowed values: TODO, IN_PROGRESS, DONE");
             }
         }
 
-        // =========================
-        // 🔐 ROLE BASED LOGIC
-        // =========================
+        Page<Task> taskPage;
 
         if ("EMPLOYEE".equals(role)) {
 
-            if (statusEnum != null) {
-                taskPage = taskRepository.findByAssignedToIdAndStatus(
-                        currentUser.getId(),
-                        statusEnum,
-                        pageable
-                );
-            } else {
-                taskPage = taskRepository.findByAssignedToId(
-                        currentUser.getId(),
-                        pageable
-                );
-            }
-
+            taskPage = statusEnum != null
+                    ? taskRepository.findByAssignedToIdAndStatus(currentUser.getId(), statusEnum, pageable)
+                    : taskRepository.findByAssignedToId(currentUser.getId(), pageable);
 
         } else if ("MANAGER".equals(role)) {
 
             if (projectId != null) {
-
                 Project project = projectRepository.findById(projectId)
                         .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
                 if (!project.getManager().getId().equals(currentUser.getId())) {
-                    throw new UnauthorizedException("Access denied to this project");
+                    throw new UnauthorizedException("Access denied");
                 }
 
-                if (statusEnum != null) {
-                    taskPage = taskRepository.findByProjectIdAndStatus(projectId, statusEnum, pageable);
-                } else {
-                    taskPage = taskRepository.findByProjectId(projectId, pageable);
-                }
+                taskPage = statusEnum != null
+                        ? taskRepository.findByProjectIdAndStatus(projectId, statusEnum, pageable)
+                        : taskRepository.findByProjectId(projectId, pageable);
 
             } else {
-                // 🔥 FIX HERE
-                if (statusEnum != null) {
-                    taskPage = taskRepository.findTasksForManagerWithStatus(
-                            currentUser.getId(),
-                            statusEnum,
-                            pageable
-                    );
-                } else {
-                    taskPage = taskRepository.findTasksForManager(currentUser.getId(), pageable);
-                }
+                taskPage = statusEnum != null
+                        ? taskRepository.findTasksForManagerWithStatus(currentUser.getId(), statusEnum, pageable)
+                        : taskRepository.findTasksForManager(currentUser.getId(), pageable);
             }
-
 
         } else { // ADMIN
 
             if (projectId != null && statusEnum != null) {
                 taskPage = taskRepository.findByProjectIdAndStatus(projectId, statusEnum, pageable);
-
             } else if (projectId != null) {
                 taskPage = taskRepository.findByProjectId(projectId, pageable);
-
             } else if (statusEnum != null) {
                 taskPage = taskRepository.findByStatus(statusEnum, pageable);
-
             } else {
                 taskPage = taskRepository.findAll(pageable);
             }
         }
 
-        // =========================
-        // 🔄 DTO MAPPING
-        // =========================
-
         List<TaskResponse> taskList = taskPage.getContent()
                 .stream()
                 .map(task -> {
-
                     if ("MANAGER".equals(role)) {
                         boolean isMyTask = task.getAssignedTo() != null &&
                                 task.getAssignedTo().getId().equals(currentUser.getId());
-
                         return mapToResponse(task, isMyTask ? "MY_TASK" : "TEAM_TASK");
                     }
-
                     return mapToResponse(task);
                 })
                 .toList();
-
-        // =========================
-        // 📦 RESPONSE
-        // =========================
 
         return new PaginationResponse<>(
                 taskList,
                 taskPage.getNumber(),
                 taskPage.getSize(),
                 taskPage.getTotalElements(),
+
+
+
+
+
+
                 taskPage.getTotalPages()
         );
     }
